# components/base-component-api/src/openapi_server/main.py
@@ -1,0 +1,25 @@
+# coding: utf-8
+
+"""
+    Component API
+
+    API for integrating components into the Assistant
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from fastapi import FastAPI
+
+from openapi_server.apis.component_api import router as ComponentApiRouter
+
+app = FastAPI(
+    title="Component API",
+    description="API for integrating components into the Assistant",
+    version="1.0.0",
+)
+
+app.include_router(ComponentApiRouter)
